Fixed layout bug in page settings menu - top of first menu item wasn't vertically aligned with top of content title

--- a/src/css/boom/page/settings.less
+++ b/src/css/boom/page/settings.less
@@ -10,8 +10,8 @@
 		width: 35rem;
 		height: 100%;
 		float: left;
-		padding: 5rem 0;
-		margin: -0.75em 0;
+		padding: 6.5rem 0;
+		margin: -1.5rem 0;
 
 		.group {
 			border-top: 3px solid @white;
@@ -37,7 +37,7 @@
 				display: block;
 				color: @darkest-grey;
 				text-decoration: none;
-				padding: 0.75em 5rem 0.75em 5rem;
+				padding: 1.5rem 5rem;
 
 				&:hover, &:focus {
 					color: @red;
